# AEGIS

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_catalogue_registry.py  003_discovery_pipeline.py  004_seed_dev_tenant.py  005_phase3_integrations.py  006_phase4_risk_policy.py  007_phase5_compliance.py  008_compliance_verbatim.py  009_phase7_threats.py  010_phase7_exposures.py  011_phase74_mitigations.py  012_phase75_mitigation_state.py  013_phase72_threat_feed.py  014_phase76_endpoint_agent.py  015_phase76_ea_more_kinds.py
api/app/: __init__.py  main.py
api/app/core/: auth.py  config.py  crypto.py  database.py  deps.py  ea_token.py  licence.py  logging.py  redis.py
api/app/models/: __init__.py  ai_provider.py  ai_service.py  ai_system.py  ai_usage_event.py  aisia_record.py  audit_log.py  base.py  cloud_ai_resource.py  compliance_control.py  compliance_framework.py  compliance_mapping.py  department.py  discovery_vector.py  draft_threat.py  endpoint_agent_event.py  endpoint_device.py  extension_device.py  idp_user.py  integration_credential.py  mitigation_action.py  module_entitlement.py  oauth_grant.py  policy.py  policy_violation.py  raw_threat_feed.py  report.py  risk_assessment.py  tenant.py  threat.py  threat_exposure.py  user.py
api/app/routes/: admin.py  aisia.py  auth.py  catalogue.py  compliance.py  dashboard.py  discovery.py  endpoint_agent.py  eramba.py  exposures.py  extension.py  health.py  ingest.py  integrations.py  me.py  mitigations.py  policies.py  registry.py  reports.py  risk.py  threat_feed.py  threats.py
api/app/schemas/: catalogue.py  common.py  compliance.py  endpoint_agent.py  exposures.py  ingest.py  integrations.py  mitigations.py  registry.py  risk_policy.py  threat_feed.py  threats.py
api/app/services/: auto_seed.py  completeness.py  compliance_engine.py  ea_discovery.py  exposure_engine.py  mitigation_orchestrator.py  policy_engine.py  report_generator.py  risk_engine.py  threat_feed_ingest.py  verification_cadence.py
api/app/workers/: celery_app.py  ingest.py  tasks.py
api/tests/: conftest.py
api/tests/unit/: test_auth_endpoints.py  test_completeness.py  test_compliance_determinism.py  test_compliance_engine.py  test_compliance_evaluator_explanations.py  test_crypto.py  (+23 more)
(+331 files in other folders)
