[project]
name = "aegis-api"
version = "0.1.0"
description = "AEGIS — AI Enterprise Governance & Inventory System (Backend API)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Securisti Consulting LLP" }]
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",  # for sync Alembic operations

    # Cache & queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3.2",
    "cryptography>=44.0.0",

    # HTTP & integrations
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    # Phase 3 cloud connectors
    "boto3>=1.35.0",

    # Discovery — matching
    "pyahocorasick>=2.1.0",

    # Logging & observability
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.18.0",

    # Utilities
    "pyyaml>=6.0.2",
    "jsonschema>=4.23.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "testcontainers[postgres,redis]>=4.8.0",
    "pre-commit>=4.0.0",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# -------- Tooling --------
[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "PT", "RET", "SIM", "TID"]
ignore = ["S101", "B008"]  # allow assert in tests; FastAPI Depends() in defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PT"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_decorators = false  # FastAPI decorators
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]
